--- a/Software/Codigo/resources/templates/index.html
+++ b/Software/Codigo/resources/templates/index.html
@@ -111,8 +111,35 @@
 			<h2>Motos tiburón</h2>
 			<h3>Un servicio de motoristas...</h3>
 
-			 <img src="../static/images/home/moto1.png" alt="Moto en rampa" height="500" > 
+			<!-- img src="../static/images/home/moto1.png" alt="Moto en rampa" height="500" style="opacity: 0.2; width: 50%; float: left;" --> 
 
+			<form class="form-horizontal" style="height: 500px; background-image: url(../static/images/home/moto1.1.png); background-repeat: no-repeat; background-origin: center; background-size: contain; ">
+				<div class="form-group">
+					<div class="col-sm-5"></div>
+					<label class="col-sm-2 control-label">Origen</label>
+					<div class="col-sm-5">
+						<input class="form-control" id="orgien" type="text"/>
+					</div>
+				</div>
+
+				<div class="form-group">
+					<div class="col-sm-5"></div>					
+					<label class="col-sm-2 control-label">Destino</label>
+					<div class="col-sm-5">
+						<input class="form-control" id="destino" type="text"/>
+					</div>
+				</div>
+
+				<div class="form-group">
+					<div class="col-sm-5"></div>					
+					<label class="col-sm-2 control-label">E-mail</label>
+					<div class="col-sm-5">
+						<input class="form-control" id="email" type="text"/>
+					</div>
+				</div>
+			</form>
+
+			
 
 			<h3>... para motoristas</h3>
 		</div>
