--- a/Software/Codigo/src/main/resources/templates/views/motostiburon/home/inicial.html
+++ b/Software/Codigo/src/main/resources/templates/views/motostiburon/home/inicial.html
@@ -3,29 +3,34 @@
 	<!-- azul #345589 -->
 
 
-	<div class="col-sm-12">
+	<div class="col-sm-12" style="text-align: center;">
 		<h2>Motos tiburón</h2>
 		<h3>Un servicio de motoristas...</h3>
 		<form class="form-horizontal"
-			style="height: 500px; background-image: url(/images/home/moto1.1.png); background-repeat: no-repeat; background-origin: center; background-size: contain;"
+			style="height: 500px; background-image: url(/images/home/moto1.1.png); background-repeat: no-repeat; background-origin: center; background-size: contain; "
 			data-th-action="@{/motostiburon/presupuesto/consultar}" method="POST">
 			<div class="form-group">
 				<div class="col-sm-5"></div>
 				<label class="col-sm-2 control-label">Origen</label>
 				<div class="col-sm-5">
-					<input class="form-control" id="origen" name="origen" type="text"/>
+					<input class="form-control" id="origen" name="origen" type="text" />
 				</div>
 			</div>
 
 			<div class="form-group">
-				<div class="col-sm-5"></div>
-				<label class="col-sm-2 control-label">Destino</label>
+				<div class="col-sm-5"  ></div>
+				<label class="col-sm-2 control-label" >Destino</label>
 				<div class="col-sm-5">
 					<input class="form-control" id="destino" name="destino" type="text" />
 				</div>
 			</div>
+			
+			
+			<div class="col-sm-7" ></div>
+			<div class="col-sm-5 text-left" >
+				<button class="btn btn-xm btn-success">Consultar</button>
+			</div>
 
-			<button class="btn btn-xm">Consultar</button>
 		</form>
 		<h3>... para motoristas</h3>
 	</div>
