--- a/Software/Codigo/src/main/resources/templates/views/motostiburon/home/presupuesto.html
+++ b/Software/Codigo/src/main/resources/templates/views/motostiburon/home/presupuesto.html
@@ -1,29 +1,36 @@
 <div data-th-fragment="fragment">
 
-	<div class="col-sm-12">
-		<div class="form-group">
-			<div class="col-sm-5"></div>
-			<label class="col-sm-2 control-label">Origen</label>
-			<div class="col-sm-5">
-				<input class="form-control" id="origen" type="text"
-					onchange="setOrigen()" data-th-value="${origen}" />
-			</div>
-		</div>
 
-		<div class="form-group">
-			<div class="col-sm-5"></div>
-			<label class="col-sm-2 control-label">Origen</label>
-			<div class="col-sm-5">
-				<input class="form-control" id="destino" type="text"
-					onchange="setDestino();" data-th-value="${destino}" />
+	<div class="col-sm-12" style="min-height:450px;">
+		<div id="map" class="col-sm-7" style="min-height: 350px;"></div>
+
+
+		<div class="col-sm-5">
+
+
+			<div class="form-group col-sm-6">
+				<label for="origen">Origen</label> <input class="form-control col-sm-5"
+					id="origen" type="text" onchange="setOrigen()"
+					data-th-value="${origen}" />
+					<button class="btn btn-xs btn-info" onclick="getCurrentAddress('ORIGEN');"><span class="glyphicon glyphicon-map-marker"></span></button>
+			</div>
+
+			<div class="form-group col-sm-6">
+				<label for="destino">Destino</label> <input class="form-control  col-sm-5"
+					id="destino" type="text" onchange="setDestino();"
+					data-th-value="${destino}" />
+					<button class="btn btn-xs btn-info"  onclick="getCurrentAddress('DESTINO');"><span class="glyphicon glyphicon-map-marker"></span></button>
+			</div>
+
+
+			<div class="col-sm-6">
+				<label>Distancia</label> <span id="distancia"></span>
+			</div>
+			<div class="col-sm-6">
+				<label> Duración</label> <span id="duracion"></span>
 			</div>
 		</div>
 	</div>
-	<div class="col-sm-12">
-		<div id="map"
-			style="height: 350px; width: 525px; right: 0px; float: right;"></div>
-	</div>
-
 
 	<script data-th-inline="javascript">
 		// <![CDATA[
@@ -33,42 +40,101 @@
 		 ********************************/
 		var map;
 		var geoCoder;
+		var directionsDisplay;
+		var directionsService;
+		var dirOrigen = null;
+		var dirDestino = null;
 
 		function initMap() {
+			directionsDisplay = new google.maps.DirectionsRenderer;
+			directionsService = new google.maps.DirectionsService;
+			geocoder = new google.maps.Geocoder();
+
 			map = new google.maps.Map(document.getElementById('map'), {
 				center : {
 					lat : -34.397,
 					lng : 150.644
 				},
-				zoom : 17
+				zoom : 17,
+				 mapTypeControlOptions: {
+				     mapTypeIds: []
+				  },
+				mapTypeId: 'roadmap'
 			});
-			geocoder = new google.maps.Geocoder();
-
-			var infoWindow = new google.maps.InfoWindow({
-				map : map
-			});
-
-			setOrigen();
-			setDestino();
+			directionsDisplay.setMap(map);
 
 			
+
+			initRoute();
 		}
 
-		function getCurrentAddres() {
+		function initRoute() {
+			var address = document.getElementById('origen').value;
+			var origen = geocodeAddress(address, "ORIGEN");
+
+			address = document.getElementById('destino').value;
+			var destino = geocodeAddress(address, "DESTINO");
+		}
+
+		function callbackSetRuta() {
+			if (dirOrigen != null && dirDestino != null) {
+				setRuta(dirOrigen, dirDestino);
+			}
+		}
+
+		function setRuta(origen, destino) {
+			console.log("-- Mostrando RUTA -- ");
+			console.log("ORIGEN ==>");
+			console.log(origen);
+			console.log("DESTINO ==>");
+			console.log(destino);
+
+			var selectedMode = 'DRIVING';
+			directionsService
+					.route(
+							{
+								origin : origen,
+								destination : destino,
+								travelMode : google.maps.TravelMode[selectedMode],
+								unitSystem : google.maps.UnitSystem.METRIC,
+								avoidTolls : true,
+								region : "ES",
+								drivingOptions : {
+									departureTime : new Date(Date.now()),
+									trafficModel : 'pessimistic'
+								}
+							},
+							function(response, status) {
+								if (status == 'OK') {
+									console
+											.log("Recibida ruta del servicio de direcciones de GOOGLE.");
+									console.log("RESPUESTA ==>");
+									console.log(response);
+
+									directionsDisplay.setDirections(response);
+									updateRouteView(response);
+								} else {
+									window
+											.alert('No se ha podido calcular la ruta debido a '
+													+ status);
+								}
+							});
+		}
+
+		function getCurrentAddress(tipo) {
 
 			if (navigator.geolocation) {
 				navigator.geolocation.getCurrentPosition(function(position) {
+					console.log("RECUPERADA ubicación actual");
+					console.log(position);
 					var pos = {
 						lat : position.coords.latitude,
 						lng : position.coords.longitude
 					};
-
-					var marker = new google.maps.Marker({
-						position : pos,
-						map : map,
-					});
-
-					map.setCenter(pos);
+										
+					setOrigenODestino(pos,tipo,"Ubicación actual");
+					
+					
 				}, function() {
 					handleLocationError(true, infoWindow, map.getCenter());
 				});
@@ -77,15 +143,15 @@
 				handleLocationError(false, infoWindow, map.getCenter());
 			}
 		}
-		
+
 		function handleLocationError(browserHasGeolocation, infoWindow, pos) {
 			infoWindow.setPosition(pos);
 			infoWindow
 					.setContent(browserHasGeolocation ? 'Error: The Geolocation service failed.'
 							: 'Error: Your browser doesn\'t support geolocation.');
 		}
-		
-		function geocodeAddress(address) {
+
+		function geocodeAddress(address, tipo) {
 			console.log("Geocoding addres: " + address);
 			geocoder
 					.geocode(
@@ -97,60 +163,73 @@
 									console
 											.log("Dirección encontrada. RESULTS ==> ");
 									console.log(results);
+									
+									var formatted_address = results[0].formatted_address;
+									var location = results[0].geometry.location;
+									var coordinate = {
+										lat : location.lat(),
+										lng : location.lng()
+									};
+									setOrigenODestino(coordinate, tipo,formatted_address);
 
-									map.setCenter(results[0].geometry.location);
-
-									var marker = new google.maps.Marker({
-										map : map,
-										position : results[0].geometry.location
-									});
-									map.setZoom(15);
 								} else {
-									alert('Geocode was not successful for the following reason: '
+									console.log('Geocode was not successful for the following reason: '
 											+ status);
+									setOrigenODestino(null, tipo, "Dirección no encontrada" );
 								}
 							});
 		}
 
+		function setOrigenODestino(direccion, tipo, direccionText) {
+			if (tipo == "ORIGEN") {
+				dirOrigen = direccion;
+				document.getElementById('origen').value = direccionText;
+			} else if (tipo == "DESTINO") {
+				dirDestino = direccion;
+				document.getElementById('destino').value = direccionText;
+			}
+
+			callbackSetRuta();
+		}
+
+		function setPin(results) {
+			map.setCenter(results[0].geometry.location);
+
+			var marker = new google.maps.Marker({
+				map : map,
+				position : results[0].geometry.location
+			});
+			map.setZoom(15);
+		}
+
 		function setOrigen() {
 			var address = document.getElementById('origen').value;
-			geocodeAddress(address);
+			geocodeAddress(address, "ORIGEN");
 		}
 
 		function setDestino() {
 			var address = document.getElementById('destino').value;
-			geocodeAddress(address);
+			geocodeAddress(address, "DESTINO");
 		}
-		
-		function calcRoute() {
-			  var selectedMode = 'DRIVING';
-			  var request = {
-			      origin: 
-		haight,
-				destination : oceanBeach,
-				// Note that Javascript allows us to access the constant
-				// using square brackets and a string value as its
-				// "property."
-				travelMode : google.maps.TravelMode[selectedMode]
-			};
-			directionsService.route(request, function(response, status) {
-				if (status == 'OK') {
-					directionsDisplay.setDirections(response);
-				}
-			});
-		}
-		
-		var directionsDisplay;
-		var directionsService = new google.maps.DirectionsService();
+
 		function initialize() {
-			  directionsDisplay = new google.maps.DirectionsRenderer();
-			  var mapOptions = {
-			    zoom: 14,
-			    center: haight
-			  }
-			  map = new google.maps.Map(document.getElementById('map'), mapOptions);
-			  directionsDisplay.setMap(map);
+			directionsDisplay = new google.maps.DirectionsRenderer();
+			var mapOptions = {
+				zoom : 14,
+				center : haight
 			}
+			map = new google.maps.Map(document.getElementById('map'),
+					mapOptions);
+			directionsDisplay.setMap(map);
+		}
+
+		function updateRouteView(directionResult) {
+			var distancia = directionResult.routes[0].legs[0].distance.text;
+			var duracion = directionResult.routes[0].legs[0].duration.text;
+
+			document.getElementById('distancia').innerHTML = distancia;
+			document.getElementById('duracion').innerHTML = duracion;
+		}
 
 		// ]]>
 	</script>
