--- a/Software/Codigo/src/main/resources/templates/views/motostiburon/home/empresa.html
+++ b/Software/Codigo/src/main/resources/templates/views/motostiburon/home/empresa.html
@@ -1,21 +1,41 @@
 <div data-th-fragment="fragment">
-<div class="col-sm-12" style="text-align: center;">
-		<p>
-		
-		En 1992, nace TIBURÓN TRANSPORTE DE MOTOS S.L. empresa dedicada al sector de la Moto, como respuesta a la demanda existente en el mercado, y ante la falta de especialización, para el transporte de las motos. 
+	<div class="col-sm-12" style="text-align: center;">
 
-Todos sabemos, que aún hoy en día, podemos ver algunas motos subidas en grúas, que ponen los pelos de punta. 
+		<div class="col-sm-6 text-justify">
+			<p>En 1992, nace TIBURÓN TRANSPORTE DE MOTOS S.L. empresa
+				dedicada al sector de la Moto, como respuesta a la demanda existente
+				en el mercado, y ante la falta de especialización, para el
+				transporte de las motos. Todos sabemos, que aún hoy en día, podemos
+				ver algunas motos subidas en grúas, que ponen los pelos de punta.
 
-Tiburón siempre tuvo como objetivo, poner en marcha un servicio de calidad, que estuviera a la altura de lo que todos nosotros queremos para nuestra moto. 
+				Tiburón siempre tuvo como objetivo, poner en marcha un servicio de
+				calidad, que estuviera a la altura de lo que todos nosotros queremos
+				para nuestra moto. Hoy podemos decir, que este objetivo está
+				cumplido, nuestros números nos avalan, somos la primera empresa
+				especializada en el transporte de motos, la de mayor volumen de
+				facturación, y sin duda, la que mayor confianza despierta en los
+				clientes.</p>
+		</div>
+		<div class="col-sm-6">
+			<img alt="Furgonentas motos tiburón 1"
+				data-th-src="@{/images/empresa/furgonetas01.jpg}" />
+		</div>
 
-Hoy podemos decir, que este objetivo está cumplido, nuestros números nos avalan, somos la primera empresa especializada en el transporte de motos, la de mayor volumen de facturación, y sin duda, la que mayor confianza despierta en los clientes.
-		
-		</p>
-		<p>
-		Actualmente tiburón, colabora con los principales concesionarios y talleres de la comunidad de Madrid, así como con revistas especializadas, somos un servicio de motoristas, para motoristas y esto es lo que nos ha hecho mejorar día a día. 
+	</div>
+	<div class="col-sm-12" style="text-align: center; ">
+		<div class="col-sm-6">
+			<img alt="Furgonentas motos tiburón 2"
+				data-th-src="@{/images/empresa/furgonetas02.jpg}" />
+		</div>
 
-Nuestra especialización es nuestra clave.
+		<div class="col-sm-6 text-justify">
+			<p>Actualmente tiburón, colabora con los principales
+				concesionarios y talleres de la comunidad de Madrid, así como con
+				revistas especializadas, somos un servicio de motoristas, para
+				motoristas y esto es lo que nos ha hecho mejorar día a día. Nuestra
+				especialización es nuestra clave. Solo transportamos motos y quads.
+				Los coches se los dejamos a otros.</p>
+		</div>
 
-Solo transportamos motos y quads. Los coches se los dejamos a otros.</p>
 	</div>
 </div>
