--- a/Software/Codigo/src/main/resources/templates/views/motostiburon/home/servicios.html
+++ b/Software/Codigo/src/main/resources/templates/views/motostiburon/home/servicios.html
@@ -1,5 +1,32 @@
 <div data-th-fragment="fragment">
-	<div class="col-sm-12" style="text-align: center;">
-		
+	<div class="col-sm-12 text-justify">
+
+		<p>Tiburón transporte de motos, presta sus servicios tanto a
+			profesionales, como al público en general, nuestra idea, es que,
+			tanto unos como otros, tengan en nuestra empresa, la respuesta
+			adecuada a sus necesidades. Los profesionales encontrarán en
+			nosotros, personal de confianza, y con la adecuada especialización,
+			discreción, rapidez de maniobra y volumen de carga, como para
+			satisfacer sus necesidades. El publico en general, verá atendidas sus
+			demandas, como si de nuestra propia moto se tratase, además de un
+			trato, familiar y responsable, tal vez sin saberlo, su moto ya haya
+			sido transportada por nosotros. En cualquier caso, y si nos necesita,
+			no dude en ponerse en contacto con nosotros, transportamos motos
+			averiadas, viajes de largo recorrido y pasamos la inspección técnica
+			de vehículos (I.T.V), recogida y entrega a domicilio.</p>
+
+	</div>
+
+	<div class="col-sm-4">
+		<img alt="Servicios motos tiburón 1"
+			data-th-src="@{/images/servicios/servicios01.jpg}" />
+	</div>
+	<div class="col-sm-4">
+		<img alt="Servicios motos tiburón 2"
+			data-th-src="@{/images/servicios/servicios02.jpg}" />
+	</div>
+	<div class="col-sm-4">
+		<img alt="Servicios motos tiburón 3"
+			data-th-src="@{/images/servicios/servicios03.jpg}" />
 	</div>
 </div>
