--- a/Software/Codigo/src/main/resources/static/css/index.css
+++ b/Software/Codigo/src/main/resources/static/css/index.css
@@ -3,29 +3,35 @@
 	padding: 0px;
 }
 
-#navbar {
+#cabecera {
 	z-index: 1000;
-	overflow: hidden;
-	background-color: #182d4f; /*Negro #272828;*/
+/* 	overflow: hidden; */
+	background-color: #182d4f;
 }
 
-#navbar a {
-	float: left;
+
+#cabecera ul {
+	background-color: #182d4f;
+}
+
+#cabecera a {
+/* 	float: left; */
 	display: block;
 	color: #f2f2f2;
 	text-align: center;
 	padding: 14px 16px;
 	text-decoration: none;
 	font-size: 17px;
+	background-color: #182d4f;
 }
 
-#navbar a:hover {
+#cabecera a:hover {
 	background-color: #ddd;
 	color: #182d4f;
 }
 
-#navbar a.active {
-	background-color: #cc9900; /* verde #4CAF50;*/
+#cabecera a.active {
+	background-color: #cc9900;
 	color: white;
 }
 
@@ -33,12 +39,12 @@
 	padding: 16px;
 }
 
-.sticky {
-	position: fixed;
-	top: 0;
-	width: 100%
-}
+/* .sticky { */
+/* 	position: fixed; */
+/* 	top: 0; */
+/* 	width: 100% */
+/* } */
 
-.sticky+.content {
-	padding-top: 20px;
-}
+/* .sticky+.content { */
+/* 	padding-top: 20px; */
+/* } */
