--- a/Software/Codigo/src/main/resources/templates/index.html
+++ b/Software/Codigo/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
 <title>Motos tiburón</title>
 
 
-<link rel="icon" data-th-href="@{/images/logo/logo.ico}"></link>
+<link rel="icon" data-th-href="@{/images/logo/logo_tib.ico}"></link>
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet"
@@ -115,8 +115,8 @@
 		style="min-height: 300px; background-color: #333;">
 		<div class="col-sm-9" style="min-height: 200px;">
 			<div style="height: 20px;"></div>
-			<img alt="Tiburón SL." data-th-src="@{/images/logo/logo_tib.jpg}"
-				border="0" style="filter: grayscale(100%);" />
+			<img alt="Tiburón SL." data-th-src="@{/images/logo/logo_tib_burned.png}"
+				border="0"  />
 		</div>
 		<div class="col-sm-3">
 			<p></p>
