--- a/Software/Codigo/src/main/resources/templates/views/motostiburon/home/servicios.html
+++ b/Software/Codigo/src/main/resources/templates/views/motostiburon/home/servicios.html
@@ -7,14 +7,15 @@
 			adecuada a sus necesidades. Los profesionales encontrarán en
 			nosotros, personal de confianza, y con la adecuada especialización,
 			discreción, rapidez de maniobra y volumen de carga, como para
-			satisfacer sus necesidades. El publico en general, verá atendidas sus
-			demandas, como si de nuestra propia moto se tratase, además de un
-			trato, familiar y responsable, tal vez sin saberlo, su moto ya haya
-			sido transportada por nosotros. En cualquier caso, y si nos necesita,
-			no dude en ponerse en contacto con nosotros, transportamos motos
-			averiadas, viajes de largo recorrido y pasamos la inspección técnica
-			de vehículos (I.T.V), recogida y entrega a domicilio.</p>
-
+			satisfacer sus necesidades.</p>
+		<p>El publico en general, verá atendidas sus demandas, como si de
+			nuestra propia moto se tratase, además de un trato, familiar y
+			responsable, tal vez sin saberlo, su moto ya haya sido transportada
+			por nosotros.</p>
+		<p>En cualquier caso, y si nos necesita, no dude en ponerse en
+			contacto con nosotros, transportamos motos averiadas, viajes de largo
+			recorrido y pasamos la inspección técnica de vehículos (I.T.V),
+			recogida y entrega a domicilio.</p>
 	</div>
 
 	<div class="col-sm-4">
