--- a/Software/Codigo/src/main/resources/templates/views/motostiburon/home/inicial.html
+++ b/Software/Codigo/src/main/resources/templates/views/motostiburon/home/inicial.html
@@ -6,32 +6,54 @@
 	<div class="col-sm-12" style="text-align: center;">
 		<h2>Motos tiburón</h2>
 		<h3>Un servicio de motoristas...</h3>
-		<form class="form-horizontal"
-			style="height: 500px; background-image: url(/images/home/moto1.1.png); background-repeat: no-repeat; background-origin: center; background-size: contain; "
+		<form class="form-group"
+			style="height: 500px; background-image: url(/images/home/moto1.1.png); background-repeat: no-repeat; background-origin: center; background-size: contain;"
 			data-th-action="@{/motostiburon/presupuesto/consultar}" method="POST">
-			<div class="form-group">
-				<div class="col-sm-5"></div>
-				<label class="col-sm-2 control-label">Origen</label>
-				<div class="col-sm-5">
-					<input class="form-control" id="origen" name="origen" type="text" />
-				</div>
+
+			<div class="col-sm-6"></div>
+			<div class="form-group col-sm-4" style="text-align: left;">
+				<label class="control-label" for="origen">Lugar de recogida</label>
+				<input class="form-control col-sm-5" id="origen" name="origen"
+					type="text" />
 			</div>
 
-			<div class="form-group">
-				<div class="col-sm-5"  ></div>
-				<label class="col-sm-2 control-label" >Destino</label>
-				<div class="col-sm-5">
-					<input class="form-control" id="destino" name="destino" type="text" />
-				</div>
+			<div class="form-group col-sm-2" style="text-align: left;">
+				<label class="control-label" for="fechaEntrega">Fecha de
+					entrega</label> <input class="form-control col-sm-5 datepicker"
+					id="fechaEntrega" name="fechaEntrega" type="text" onfocus="blur();" />
 			</div>
-			
-			
-			<div class="col-sm-7" ></div>
-			<div class="col-sm-5 text-left" >
-				<button class="btn btn-xm btn-success">Consultar</button>
+
+			<div class="col-sm-6"></div>
+			<div class="form-group col-sm-4" style="text-align: left;">
+				<label class="control-label" for="fechaRecogida">Lugar de
+					entrega</label> <input class="form-control col-sm-5" id="destino"
+					name="destino" type="text" />
+			</div>
+
+			<div class="form-group col-sm-2" style="text-align: left;">
+				<label class="control-label" for="fechaRecogida">Fecha de
+					recogida</label> <input class="form-control col-sm-5 datepicker"
+					id="fechaRecogida" name="fechaRecogida" type="text"
+					onfocus="blur();" />
+			</div>
+
+			<div class="col-sm-6"></div>
+			<div class="form-group col-sm-6 text-right">
+				<button class="btn btn-xm btn-success">Consultar precios</button>
 			</div>
 
 		</form>
+
+		<script type="text/javascript">
+			$('.datepicker').datepicker({
+				weekStart : 1,
+				startDate : "today",
+				todayBtn : "linked",
+				language : "es",
+				daysOfWeekHighlighted : "0,6",
+				autoclose : true
+			});
+		</script>
 		<h3>... para motoristas</h3>
 	</div>
 </div>
